--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,132 +5,198 @@
     android:id="@+id/lblPrice"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0B0A0A"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/txtName"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginEnd="61dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
         android:text="Name"
+        android:textColor="#2196F3"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/lblSymbol"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spCoinChoice" />
+        app:layout_constraintTop_toBottomOf="@+id/lblName" />
 
     <Spinner
         android:id="@+id/spCoinChoice"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="16dp"
-        android:background="#03A9F4"
-        app:layout_constraintBottom_toTopOf="@+id/txtName"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:background="#DCE2E4"
+        app:layout_constraintBottom_toTopOf="@+id/lblName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lblDropDown" />
 
     <TextView
-        android:id="@+id/txtSymbol"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="3dp"
-        android:text="Symbol"
-        app:layout_constraintBottom_toBottomOf="@+id/lblSymbol"
+        android:id="@+id/lblPercChange"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Percent Change:"
+        android:textAllCaps="true"
+        android:textColor="#8BC34A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtPercChange"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lblSymbol"
-        app:layout_constraintTop_toTopOf="@+id/lblSymbol" />
-
-    <TextView
-        android:id="@+id/txtSupply"
-        android:layout_width="0dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="134dp"
-        android:text="Supply"
-        app:layout_constraintBaseline_toBaselineOf="@+id/lblSupply"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lblSupply" />
-
-    <TextView
-        android:id="@+id/txtPrice"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="141dp"
-        android:layout_marginBottom="20dp"
-        android:text="Price"
-        app:layout_constraintBottom_toTopOf="@+id/lblPercChange"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/lblSupply" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
 
     <TextView
         android:id="@+id/txtPercChange"
-        android:layout_width="0dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="146dp"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
         android:text="percChange"
+        android:textColor="#2196F3"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lblPercChange"
-        app:layout_constraintTop_toTopOf="@+id/lblPercChange" />
-
-    <TextView
-        android:id="@+id/lblSymbol"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="18dp"
-        android:text="Symbol:"
-        app:layout_constraintBottom_toTopOf="@+id/lblSupply"
-        app:layout_constraintEnd_toStartOf="@+id/txtSymbol"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtName" />
+        app:layout_constraintTop_toBottomOf="@+id/lblPercChange" />
 
     <TextView
-        android:id="@+id/lblSupply"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="17dp"
-        android:text="Supply:"
+        android:id="@+id/txtSupply"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Supply"
+        android:textColor="#2196F3"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toStartOf="@+id/txtSupply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblSupply" />
+
+    <TextView
+        android:id="@+id/txtSymbol"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Symbol"
+        android:textColor="#2196F3"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/lblSupply"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblSymbol" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="21dp"
-        android:text="Price:"
-        app:layout_constraintBottom_toTopOf="@+id/lblPercChange"
-        app:layout_constraintEnd_toStartOf="@+id/txtPrice"
+        android:id="@+id/lblSupply"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Supply:"
+        android:textAllCaps="true"
+        android:textColor="#8BC34A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtSupply"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblSupply" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSymbol" />
 
     <TextView
-        android:id="@+id/lblPercChange"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="404dp"
-        android:text="% Change"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/txtPercChange"
+        android:id="@+id/textView8"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Price:"
+        android:textAllCaps="true"
+        android:textColor="#8BC34A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSupply" />
+
+    <TextView
+        android:id="@+id/lblSymbol"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Symbol:"
+        android:textAllCaps="true"
+        android:textColor="#8BC34A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtSymbol"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtName" />
+
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Price"
+        android:textColor="#2196F3"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/lblPercChange"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/lblName"
+        android:layout_width="344dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Currency Name:"
+        android:textAllCaps="true"
+        android:textColor="#8BC34A"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spCoinChoice" />
+
+    <TextView
+        android:id="@+id/lblDropDown"
+        android:layout_width="344dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:fontFamily="casual"
+        android:text="Select a Currency:"
+        android:textAllCaps="true"
+        android:textColor="#ECEFE9"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/spCoinChoice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
